--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,9 @@
 
 	<properties>
 		<java.version>1.8</java.version>
+		<project.build.sourceEncoding>
+			UTF-8
+		</project.build.sourceEncoding>
 	</properties>
 
 	<dependencies>
@@ -28,6 +31,15 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+        <!--<dependency>
+            <groupId>spring-boot-starter-logging</groupId>
+            <artifactId>org.springframework.boot</artifactId>
+        </dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-log4j2</artifactId>
+		</dependency>-->
 
 		<!-- 数据库相关 -->
 		<dependency>
@@ -70,6 +82,15 @@
 			<groupId>com.alibaba</groupId>
 			<artifactId>fastjson</artifactId>
 			<version>1.2.62</version>
+		</dependency>
+
+		<!-- 音乐时长 -->
+		<!-- 可以获取音乐时长 -->
+		<!-- https://mvnrepository.com/artifact/org/jaudiotagger -->
+		<dependency>
+			<groupId>org</groupId>
+			<artifactId>jaudiotagger</artifactId>
+			<version>2.0.3</version>
 		</dependency>
 
 	</dependencies>
