--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+spring.profiles.active=dev
 
+logging.level.cn.cc=info
+
+logging.file.path = /tmp/audio/logs/
+#logging.file.path = E:/audio/logs/
+
+logging.pattern.console=%d{yyyy-MM-dd} [%thread] %-5level %logger{50} - %msg%n
+
+logging.pattern.file=%d{yyyy-MM-dd} === [%thread] === %-5level === %logger{50} ==== %msg%n
