--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,9 @@ spring.profiles.active=dev
 
 logging.level.cn.cc=info
 
+#和代码同级的日志
 logging.file.path = /tmp/audio/logs/
-#logging.file.path = E:/audio/logs/
+#logging.file.path = E:/java/audio/logs/
 
 logging.pattern.console=%d{yyyy-MM-dd} [%thread] %-5level %logger{50} - %msg%n
 
